<resources>
    <string name="app_name">MealEmpathy</string>
    <string name="description">Seja bem-vindo a nossa conexão com ações solidárias.</string>
    <string name="copyright">Desenvolvido por Tech Warriors</string>
    <string name="logo">Logo do MealEmpathy</string>
    <string name="search">Buscar</string>
    <string name="search_label">Buscar ação solidária</string>
    <string name="search_placeholder">Coloque o nome da ação solidária</string>
    <string name="title_home">Home</string>
    <string name="title_about">Sobre</string>
    <string name="title_actions">Ações</string>
    <string name="title_solidarity_actions">Ações solidárias</string>
    <string name="how_to_works_title">Como funciona</string>
    <string name="how_to_works_text">O MealEmpathy é uma plataforma completa que ajuda seus parceiros, como restaurantes, mercados e fazendas, a evitarem o desperdício. No entanto, sabemos que às vezes os alimentos que sobram acabam indo para o lixo. Com isso, conectamos nossos parceiros a ONGs, igrejas e outras entidades beneficentes que entregam refeições feitas a partir de alimentos selecionados pela nossa IA generativa. Essa IA visa um bom valor nutricional e calórico, trazendo variedade e sabor para pessoas necessitadas.</string>
    <string name="mission_title">Missão</string>
    <string name="mission_text">Implementar o ecossistema MealEmpathy para gerenciamento otimizado de insumos alimentícios, combatendo o desperdício e a insegurança alimentar.</string>
    <string name="vision_title">Visão</string>
    <string name="vision_text">Ser referência em gerenciamento inteligente de insumos alimentícios, promovendo uma alimentação sustentável e equitativa.</string>
    <string name="values_title">Valores</string>
    <string name="values_text">Sustentabilidade, colaboração, empatia, inovação e impacto social.</string>
    <string name="objectives_title">Objetivos</string>
    <string name="objectives_reduce_waste">Reduzir o desperdício</string>
    <string name="objectives_decision_of_stock">Tomada de decisão sobre o estoque dos parceiros</string>
    <string name="objectives_connect_to_sdg_2">Conectar entidades beneficientes e parceiros a pessoas famintas, cumprindo o ODS 2</string>
    <string name="objectives_optimize_resources">Otimizar alocação de recursos alimentícios e logísticos dos parceiros através de IA</string>
    <string name="objectives_food_insecurity">Diminuição da insegurança alimentar</string>
    <string name="solidarity_actions_list">Solidários</string>
    <string name="button_maps">Google Maps</string>
    <string name="free">Gratuito</string>
    <string name="apae_title">APAE</string>
    <string name="apae_logo">Logo da APAE</string>
    <string name="apae_info">157 pratos às quartas-feiras:</string>
    <string name="apae_first_meal">• Macarrão, frango e alface</string>
    <string name="apae_second_meal">• Arroz, porco e tomate</string>
    <string name="apae_time">14:00</string>
    <string name="funiculi_funicula_title">Funiculì Funiculà</string>
    <string name="funiculi_funicula_logo">Imagem do Funiculì Funiculà</string>
    <string name="funiculi_funicula_info">82 pratos todos os dias:</string>
    <string name="funiculi_funicula_first_meal">• Feijão, linguiça e brócolis</string>
    <string name="funiculi_funicula_price">R$ 4,00</string>
    <string name="funiculi_funicula_time">18:30</string>
    <string name="wunderwald_title">Wunderwald</string>
    <string name="wunderwald_logo">Imagem do Wunderwald</string>
    <string name="wunderwald_info">220 pratos todo final de semana:</string>
    <string name="wunderwald_first_meal">• Aipim, marreco e chucrute</string>
    <string name="wunderwald_second_meal">• Aipim, salchicha e ervilha</string>
    <string name="wunderwald_third_meal">• Aipim, porco e beterraba</string>
    <string name="wunderwald_price">R$ 2,50</string>
    <string name="wunderwald_time">12:00</string>
    <string name="lutheran_church_title">Igreja Luterana (centro)</string>
    <string name="lutheran_church_logo">Imagem da Igreja Luterana (centro)</string>
    <string name="lutheran_church_info">135 pratos às terças-feiras:</string>
    <string name="lutheran_church_first_meal">• Arroz, carne e alface</string>
    <string name="lutheran_church_time">11:00</string>
</resources>
