<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/four"
    tools:context=".ui.home.HomeFragment">
    <ImageView
        android:layout_width="@dimen/logo"
        android:layout_height="@dimen/logo"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:layout_marginTop="@dimen/eight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:text="@string/app_name"
        android:textSize="@dimen/title"
        android:id="@+id/title"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/two"
        android:textColor="@color/green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text="@string/description"
        android:textSize="@dimen/title_small"
        android:layout_marginTop="@dimen/one"
        android:id="@+id/description"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/copyright"
        android:layout_marginTop="@dimen/one"
        android:textSize="@dimen/text_small"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>
