<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.solidarity_actions.SolidarityActionsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/four">
        <TextView app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/solidarity_actions_list"
            android:textSize="@dimen/title_small"
            android:id="@+id/title"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="@dimen/two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apae_card"
            android:background="@drawable/rounded_solidarity_action_card"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TableLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:stretchColumns="1">
                <TableRow tools:ignore="UselessParent">
                    <ImageView
                        android:layout_width="@dimen/solidarity_action_logo"
                        android:layout_height="@dimen/solidarity_action_logo"
                        android:contentDescription="@string/apae_logo"
                        android:src="@drawable/apae_logo"
                        android:layout_marginEnd="@dimen/two" />

                    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/apae_title"
                            android:textSize="@dimen/large_text"
                            android:id="@+id/apae_title"
                            android:textColor="@color/purple"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView app:layout_constraintTop_toBottomOf="@id/apae_title"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/apae_info"
                            android:textSize="@dimen/text"
                            android:id="@+id/apae_info"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView app:layout_constraintTop_toBottomOf="@id/apae_info"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/apae_first_meal"
                            android:textSize="@dimen/text"
                            android:id="@+id/apae_first_meal"
                            android:textColor="@color/dark_gray"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView app:layout_constraintTop_toBottomOf="@id/apae_first_meal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/apae_second_meal"
                            android:textSize="@dimen/text"
                            android:id="@+id/apae_second_meal"
                            android:textColor="@color/dark_gray"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TableLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/apae_second_meal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginTop="@dimen/two"
                            android:stretchColumns="2">
                            <TableRow tools:ignore="UselessParent">
                                <TextView android:background="@drawable/tag_green"
                                    android:text="@string/free"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/text"
                                    android:layout_marginEnd="@dimen/two"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                                <TextView android:background="@drawable/tag_orange"
                                    android:text="@string/apae_time"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                                <ImageView
                                    android:id="@+id/apae_button_maps"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/button_maps"
                                    android:layout_gravity="end"
                                    android:contentDescription="@string/button_maps"
                                    android:src="@drawable/google_maps" />
                            </TableRow>
                        </TableLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </TableRow>
            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="@dimen/two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/funiculi_funicula_card"
            android:background="@drawable/rounded_solidarity_action_card"
            app:layout_constraintTop_toBottomOf="@id/apae_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TableLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:stretchColumns="1">
                <TableRow tools:ignore="UselessParent">
                    <ImageView
                        android:layout_width="@dimen/solidarity_action_logo"
                        android:layout_height="@dimen/solidarity_action_logo"
                        android:contentDescription="@string/funiculi_funicula_logo"
                        android:src="@drawable/funiculi_funicula_logo"
                        android:layout_marginEnd="@dimen/two" />

                    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/funiculi_funicula_title"
                            android:textSize="@dimen/large_text"
                            android:id="@+id/funiculi_funicula_title"
                            android:textColor="@color/purple"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView app:layout_constraintTop_toBottomOf="@id/funiculi_funicula_title"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/funiculi_funicula_info"
                            android:textSize="@dimen/text"
                            android:id="@+id/funiculi_funicula_info"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView app:layout_constraintTop_toBottomOf="@id/funiculi_funicula_info"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/funiculi_funicula_first_meal"
                            android:textSize="@dimen/text"
                            android:id="@+id/funiculi_funicula_first_meal"
                            android:textColor="@color/dark_gray"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TableLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/funiculi_funicula_first_meal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginTop="@dimen/two"
                            android:stretchColumns="2">
                            <TableRow tools:ignore="UselessParent">
                                <TextView android:background="@drawable/tag_green"
                                    android:text="@string/funiculi_funicula_price"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/text"
                                    android:layout_marginEnd="@dimen/two"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                                <TextView android:background="@drawable/tag_orange"
                                    android:text="@string/funiculi_funicula_time"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                                <ImageView
                                    android:id="@+id/funiculi_funicula_button_maps"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/button_maps"
                                    android:layout_gravity="end"
                                    android:contentDescription="@string/button_maps"
                                    android:src="@drawable/google_maps" />
                            </TableRow>
                        </TableLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </TableRow>
            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="@dimen/two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/wunderwald_card"
            android:background="@drawable/rounded_solidarity_action_card"
            app:layout_constraintTop_toBottomOf="@id/funiculi_funicula_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TableLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:stretchColumns="1">
                <TableRow tools:ignore="UselessParent">
                    <ImageView
                        android:layout_width="@dimen/solidarity_action_logo"
                        android:layout_height="@dimen/solidarity_action_logo"
                        android:contentDescription="@string/wunderwald_logo"
                        android:src="@drawable/wunderwald_logo"
                        android:layout_marginEnd="@dimen/two" />

                    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/wunderwald_title"
                            android:textSize="@dimen/large_text"
                            android:id="@+id/wunderwald_title"
                            android:textColor="@color/purple"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView app:layout_constraintTop_toBottomOf="@id/wunderwald_title"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/wunderwald_info"
                            android:textSize="@dimen/text"
                            android:id="@+id/wunderwald_info"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView app:layout_constraintTop_toBottomOf="@id/wunderwald_info"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/wunderwald_first_meal"
                            android:textSize="@dimen/text"
                            android:id="@+id/wunderwald_first_meal"
                            android:textColor="@color/dark_gray"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView app:layout_constraintTop_toBottomOf="@id/wunderwald_first_meal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/wunderwald_second_meal"
                            android:textSize="@dimen/text"
                            android:id="@+id/wunderwald_second_meal"
                            android:textColor="@color/dark_gray"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView app:layout_constraintTop_toBottomOf="@id/wunderwald_second_meal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/wunderwald_third_meal"
                            android:textSize="@dimen/text"
                            android:id="@+id/wunderwald_third_meal"
                            android:textColor="@color/dark_gray"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TableLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/wunderwald_third_meal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginTop="@dimen/two"
                            android:stretchColumns="2">
                            <TableRow tools:ignore="UselessParent">
                                <TextView android:background="@drawable/tag_green"
                                    android:text="@string/wunderwald_price"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/text"
                                    android:layout_marginEnd="@dimen/two"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                                <TextView android:background="@drawable/tag_orange"
                                    android:text="@string/wunderwald_time"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                                <ImageView
                                    android:id="@+id/wunderwald_button_maps"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/button_maps"
                                    android:layout_gravity="end"
                                    android:contentDescription="@string/button_maps"
                                    android:src="@drawable/google_maps" />
                            </TableRow>
                        </TableLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </TableRow>
            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
